[tool.poetry]
name = "hpctesttool"
version = "0.1.0"
description = "Test utilities for the HPCToolkit project"
authors = ["Jonathon Anderson <janderson@rice.edu>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
ruamel-yaml = "^0.17.16"
pytest = "^7.2.1"
pyparsing = "^3.0.9"

[tool.poetry.scripts]
hpctesttool = "hpctesttool.__main__:main"

[tool.pytest.ini_options]
xfail_strict = true
junit_suite_name = "py-hpctesttool"

# These are dependencies that are you will never need, but are needed for the vendoring deps.
[tool.poetry.group.implicit]
optional = true
[tool.poetry.group.implicit.dependencies]
poetry-core = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
